# CRUST-bench

./: .gitignore  .gitmodules  README.md  requirements.txt
datasets/CRUST_bench/RBench/Megalania/: Cargo.toml
datasets/CRUST_bench/RBench/Megalania/src/: lib.rs
datasets/CRUST_bench/RBench/Megalania/src/interfaces/: encoder_interface.rs  file_output.rs  lzma_header_encoder.rs  lzma_packet.rs  lzma_packet_encoder.rs  lzma_state.rs  max_heap.rs  memory_mapper.rs  output_interface.rs  packet_enumerator.rs  packet_slab.rs  packet_slab_neighbour.rs  packet_slab_undo_stack.rs  perplexity_encoder.rs  perplexity_table.rs  probability.rs  probability_model.rs  range_encoder.rs  substring_enumerator.rs  top_k_packet_finder.rs
datasets/CRUST_bench/RBench/c_aces/: Cargo.toml
datasets/CRUST_bench/RBench/c_aces/src/: lib.rs
datasets/CRUST_bench/RBench/c_aces/src/interfaces/: aces.rs  aces_internal.rs  channel.rs  common.rs  error.rs  matrix.rs  polynomial.rs
datasets/CRUST_bench/RBench/inversion_list/: Cargo.toml
datasets/CRUST_bench/RBench/inversion_list/src/: lib.rs
datasets/CRUST_bench/RBench/inversion_list/src/interfaces/: inversion_list.rs
datasets/CRUST_bench/RBench/rubiksolver/: Cargo.toml
datasets/CRUST_bench/RBench/rubiksolver/src/: lib.rs
datasets/CRUST_bench/RBench/rubiksolver/src/interfaces/: hash.rs  heap.rs  rubik_model.rs  solve_rubik.rs
scripts/: git_ver_2.sh
scripts/greedy_vs_topk_repair/: README.md  self_repair.sh  top_k_repair.sh
scripts/swe_agent/: swe_repair.sh
scripts/test_based_repair/: test_repair.sh
scripts/test_model_perf/: all_models.sh  claude.sh  claude37.sh  deepseek_qwen.sh  gemini.sh  gpt4.sh  llama3.sh  mistral.sh  o1-mini.sh  o1.sh  openhands_coder.sh  test_qwq.sh  virtuoso.sh
scripts/test_repair_perf/: claude.sh  claude37.sh  deepseek-distil.sh  gemini.sh  gpt4o.sh  o1-mini.sh  o1.sh  virtuoso.sh
scripts/transpile/: run.sh
scripts/unresolved/: unres.sh
scripts/vert_run/: vert.sh
src/: benchmark.py  compile_projects.py  endpoint_config.py  find_projects_that_build.py  perf_stats.py  profiler.py  prompter.py  repair_tests.py  repairer.py  requirements.txt  run.py  setup.py  stats.py  test_repairer.py  test_stats.py  transpiler.py  understand_errors.py
src/__init__/: Cargo.toml
src/check_benchmarks/: Cargo.toml  README.md  check_build.py  error_list.txt
src/dataset_stats/: README.md  avg.ipynb  c_repo_stats.txt  get_c_stats.py  get_interface_stats.py
src/endpoints/: call_endpoint.py  claude.py  claude37.py  gemini.py  gpt.py  key_handler.py  qwq.py  vllm_client.py  vllm_server.py
src/endpoints/cache/: gpt_cache.jsonl
src/prompters/: prompter_utils.py  repair.py  test_repair.py  transpile.py
src/swe_agent_ablations/: baseline_swe_agent.py  pipelined_swe_agent.py  ps1.md
src/swe_agent_experiments/: README.md  baseline_swe_agent.py  compile_swe_agent_output.py  pipelined_swe_agent.py
src/utils/: compile_c_utils.py  compile_rust_utils.py  compute_costs.py  parse_c.py  parse_rust.py  rust_project_builder.py
(+960 files in other folders)
