[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"

bincode = "1.3"

ulid = "1.1.3"

term_size = "0.3.2"

atty = "0.2"

clap = "2.33"

env_logger = "0.11.5"

hostname = "^0.4"

os_pipe = "1.2.1"

signal-hook = "0.3.17"

magic = "0.16.2"

users = "0.11"

semver = "1.0"

cookie = "0.17"

lazy_static = "1.4"

nix = "0.29.0"

syslog = "5.0"

rand = "0.8"

chrono = "0.4.38"


