[package]
name = "Megalania"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

[lib]
path = "src/lib.rs"

[[test]]
name = "max_heap_test"
path = "src/bin/max_heap_test.rs"

[[test]]
name = "packet_slab_undo_stack_test"
path = "src/bin/packet_slab_undo_stack_test.rs"

[[test]]
name = "substring_enumerator_test"
path = "src/bin/substring_enumerator_test.rs"
